[tool.poetry]
name = "myproject"
version = "0.0.0"
description = "This is my myproject"
authors = ["Rammstein-1994 <lanc840930.mg09@nycu.edu.tw>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-dotenv = "^0.5.2"
pytest-watcher = "^0.3.4"
pytest-mock = "^3.11.1"
pytest-socket = "^0.6.0"
pytest-asyncio = "^0.21.0"


[tool.poetry.group.dev.dependencies]
rich = "^13.4.2"
numpy = "^1.25.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
loguru = "^0.7.0"
jupyter = "^1.0.0"

[tool.mypy]
ignore_missing_imports = "True"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
